<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.6</version>
        <relativePath/>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.gurukulams</groupId>
    <artifactId>gurukulams</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>19</maven.compiler.source>
        <maven.compiler.target>19</maven.compiler.target>

<!--        <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>-->
<!--        <maven.compiler.failOnWarning>true</maven.compiler.failOnWarning>-->
        <!-- Version of Dependencies -->
        <springdoc.version>1.6.12</springdoc.version>
        <springdoc.core.version>1.1.49</springdoc.core.version>
        <maven.checkstyle.version>3.2.0</maven.checkstyle.version>
        <checkstyle.version>10.4</checkstyle.version>
        <jsonwebtoken.version>0.11.2</jsonwebtoken.version>
        <swagger.version>2.2.0</swagger.version>
        <archunit.version>0.21.0</archunit.version>
        <exec-maven.version>${maven-enforcer-plugin.version}</exec-maven.version>
        <jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>
        <maven-enforcer-plugin.version>3.1.0</maven-enforcer-plugin.version>
    </properties>

    <modules>
        <module>gurukulams-core</module>
        <module>gurukulams-web</module>
    </modules>


    <build>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${maven.checkstyle.version}</version>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>${checkstyle.version}</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <suppressionsLocation>checkstyle-suppressions.xml
                    </suppressionsLocation>
                    <consoleOutput>true</consoleOutput>
                    <failsOnError>true</failsOnError>
                    <linkXRef>false</linkXRef>
                </configuration>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco-maven-plugin.version}</version>
                <configuration>
                    <includes>
                        <include>com/gurukulams/core/service/Book*</include>
                        <include>com/gurukulams/core/service/Tag*</include>
                    </includes>

                </configuration>
                <executions>
                    <execution>
                        <id>default-prepare-agent</id>
                        <phase>test</phase>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <configuration>
                            <!-- Sets the path to the file which contains the execution data. -->
                            <destFile>target/coverage-reports/jacoco-ut.exec</destFile>
                        </configuration>
                    </execution>
                    <execution>
                        <id>default-report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>default-check</id>
                        <phase>test</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <rule>
                                    <element>PACKAGE</element>
                                    <limits>
                                        <limit>
                                            <counter>LINE</counter>
                                            <value>COVEREDRATIO</value>
                                            <minimum>0.8</minimum>
                                        </limit>
                                    </limits>
                                </rule>
                            </rules>
                        </configuration>
                    </execution>
                    <execution>
                        <id>post-integration-test</id>
                        <phase>post-integration-test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <configuration>
                            <dataFile>target/coverage-reports/jacoco-it.exec</dataFile>
                            <outputDirectory>target/coverage-reports/jacoco-it</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven-enforcer-plugin.version}</version>
                <!--<dependencies> -->
                <!--<dependency> -->
                <!--<groupId>com.baeldung</groupId> -->
                <!--<artifactId>custom-rule</artifactId> -->
                <!--<version>1.0</version> -->
                <!--</dependency> -->
                <!--</dependencies> -->
                <executions>
                    <execution>
                        <id>enforce</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <banDuplicatePomDependencyVersions/>
                                <!--                                <requireFilesDontExist>-->
                                <!--                                    <files>-->
                                <!--                                        <file>${basedir}/pom.xml.versionsBackup</file>-->
                                <!--                                    </files>-->
                                <!--                                    <message>Please use the latest version. Check You POM that i have modified fo you</message>-->
                                <!--                                </requireFilesDontExist>-->
                                <requireJavaVersion>
                                    <version>${maven.compiler.source}</version>
                                </requireJavaVersion>
                                <!--other rules -->
                                <!--<myCustomRule implementation="com.baeldung.enforcer.MyCustomRule"/> -->
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>